--- a/Alpaca image classifier.ipynb
+++ b/Alpaca image classifier.ipynb
@@ -1,93 +1,132 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "id": "e20a0971",
-   "metadata": {},
-   "source": [
-    "# Building an Image Classifier Deep Network applying Transfer Learning"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "ea29c51f",
-   "metadata": {},
-   "outputs": [
+  "cells": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'tensorflow'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-249c4c37336a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# import the required libraries\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mtensorflow\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpreprocessing\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mimage_dataset_from_directory\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow'"
-     ]
+      "cell_type": "markdown",
+      "id": "e20a0971",
+      "metadata": {
+        "id": "e20a0971"
+      },
+      "source": [
+        "# Building an Image Classifier Deep Network applying Transfer Learning"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "id": "ea29c51f",
+      "metadata": {
+        "id": "ea29c51f"
+      },
+      "outputs": [],
+      "source": [
+        "# import the required libraries\n",
+        "from tensorflow.keras.preprocessing import image_dataset_from_directory"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "42ad8bd9",
+      "metadata": {
+        "id": "42ad8bd9"
+      },
+      "source": [
+        "## Dataset creation"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "id": "d58f9b25",
+      "metadata": {
+        "id": "d58f9b25",
+        "outputId": "7b79fd99-5b97-4b10-e292-42175492684c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 380
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "FileNotFoundError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-b5fe2b1daab3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m                                              \u001b[0mvalidation_split\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m                                              \u001b[0msubset\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'training'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m                                              seed=42)\n\u001b[0m\u001b[1;32m     14\u001b[0m validation_set = image_dataset_from_directory(directory,\n\u001b[1;32m     15\u001b[0m                                              \u001b[0mshuffle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/keras/preprocessing/image_dataset.py\u001b[0m in \u001b[0;36mimage_dataset_from_directory\u001b[0;34m(directory, labels, label_mode, class_names, color_mode, batch_size, image_size, shuffle, seed, validation_split, subset, interpolation, follow_links, crop_to_aspect_ratio, **kwargs)\u001b[0m\n\u001b[1;32m    197\u001b[0m       \u001b[0mshuffle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mshuffle\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    198\u001b[0m       \u001b[0mseed\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mseed\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 199\u001b[0;31m       follow_links=follow_links)\n\u001b[0m\u001b[1;32m    200\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    201\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mlabel_mode\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'binary'\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclass_names\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/keras/preprocessing/dataset_utils.py\u001b[0m in \u001b[0;36mindex_directory\u001b[0;34m(directory, labels, formats, class_names, shuffle, seed, follow_links)\u001b[0m\n\u001b[1;32m     64\u001b[0m   \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     65\u001b[0m     \u001b[0msubdirs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 66\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0msubdir\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdirectory\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     67\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdirectory\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msubdir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     68\u001b[0m         \u001b[0msubdirs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msubdir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'data/'"
+          ]
+        }
+      ],
+      "source": [
+        "# dataset's directory path\n",
+        "directory = \"data/\"\n",
+        "\n",
+        "batch_size = 32\n",
+        "image_size = (160,160) # resize the images to 160x160\n",
+        "\n",
+        "# create training and validation sets\n",
+        "# use image_dataset_from_directory to load the images\n",
+        "# set a validation split and specify the subset ('training' or 'validation')\n",
+        "# set the random seeds to match eachother (to avoid overlapping of the images in\n",
+        "# train and validation sets)\n",
+        "\n",
+        "train_set = image_dataset_from_directory(directory,\n",
+        "                                             shuffle=True,\n",
+        "                                             batch_size=batch_size,\n",
+        "                                             image_size=image_size,\n",
+        "                                             validation_split=0.2,\n",
+        "                                             subset='training',\n",
+        "                                             seed=42)\n",
+        "validation_set = image_dataset_from_directory(directory,\n",
+        "                                             shuffle=True,\n",
+        "                                             batch_size=batch_size,\n",
+        "                                             image_size=image_size,\n",
+        "                                             validation_split=0.2,\n",
+        "                                             subset='validation',\n",
+        "                                             seed=42)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# print some images\n",
+        "# use .class_names attribute to retrieve the classes of the images from the \n",
+        "class_names = train_set.class_names"
+      ],
+      "metadata": {
+        "id": "Af79dbaPaA6Z"
+      },
+      "id": "Af79dbaPaA6Z",
+      "execution_count": null,
+      "outputs": []
     }
-   ],
-   "source": [
-    "# import the required libraries\n",
-    "from tensorflow.keras.preprocessing import image_dataset_from_directory"
-   ]
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.8.8"
+    },
+    "colab": {
+      "name": "Alpaca image classifier.ipynb",
+      "provenance": []
+    }
   },
-  {
-   "cell_type": "markdown",
-   "id": "42ad8bd9",
-   "metadata": {},
-   "source": [
-    "## Dataset creation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d58f9b25",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# dataset's directory path\n",
-    "directory = \"data/\"\n",
-    "\n",
-    "batch_size = 32\n",
-    "image_size = (160,160) \n",
-    "\n",
-    "train_set = image_dataset_from_directory(directory,\n",
-    "                                             shuffle=True,\n",
-    "                                             batch_size=batch_size,\n",
-    "                                             image_size=image_size,\n",
-    "                                             validation_split=0.2,\n",
-    "                                             subset='training',\n",
-    "                                             seed=42)\n",
-    "validation_set = image_dataset_from_directory(directory,\n",
-    "                                             shuffle=True,\n",
-    "                                             batch_size=batch_size,\n",
-    "                                             image_size=image_size,\n",
-    "                                             validation_split=0.2,\n",
-    "                                             subset='validation',\n",
-    "                                             seed=42)"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.8"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
